--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "compile": "npx hardhat compile",
     "deploy": "echo 'Not implemented'",
     "deploy:localhost": "echo 'Not implemented'",
-    "deploy:rinkeby": "echo 'Not implemented'",
+    "deploy:rinkeby": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network rinkeby",
+    "deploy:ropsten": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network ropsten",
     "deploy:mumbai": "echo 'Not implemented'",
     "deploy:matic": "echo 'Not implemented'",
+    "deploy:mainnet": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network mainnet",
     "lint:js": "eslint --ignore-path .gitignore ./test ./scripts",
     "lint:js:fix": "eslint --ignore-path .gitignore ./test ./scripts --fix",
     "lint:sol": "solhint 'contracts/**/*.sol'",
