--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pict-contracts",
+  "name": "souls-contract",
   "version": "1.0.0",
-  "description": "[![build](https://github.com/kf106/PICT/actions/workflows/build.yml/badge.svg)](https://github.com/kf106/PICT/actions/workflows/build.yml) [![tests](https://github.com/kf106/ICOT/actions/workflows/tests.yml/badge.svg)](https://github.com/kf106/PICT/actions/workflows/tests.yml)",
+  "description": "[![build](https://github.com/kf106/SOULS/actions/workflows/build.yml/badge.svg)](https://github.com/kf106/SOULS/actions/workflows/build.yml) [![tests](https://github.com/kf106/SOULS/actions/workflows/tests.yml/badge.svg)](https://github.com/kf106/SOULS/actions/workflows/tests.yml)",
   "main": "hardhat.config.js",
   "directories": {
     "test": "test"
@@ -12,6 +12,8 @@
     "deploy:localhost": "echo 'Not implemented'",
     "deploy:rinkeby": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network rinkeby",
     "deploy:ropsten": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network ropsten",
+    "deploy:bsc_testnet": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network bsc_testnet",
+    "deploy:bsc_mainnet": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network bsc_mainent",
     "deploy:mumbai": "echo 'Not implemented'",
     "deploy:matic": "echo 'Not implemented'",
     "deploy:mainnet": "npx hardhat run scripts/deploy.js --config hardhat-deploy.config.js --network mainnet",
@@ -29,38 +31,39 @@
   "license": "ISC",
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.5",
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
+    "@nomiclabs/hardhat-truffle5": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.3.0",
+    "@openzeppelin/contracts": "^4.3.2",
     "babel-preset-env": "^1.7.0",
     "dotenv-safe": "^8.2.0",
     "eslint-config-standard": "^16.0.3",
-    "hardhat": "^2.6.1",
+    "hardhat": "^2.6.4",
     "hardhat-ethers": "^1.0.1",
     "hardhat-gas-reporter": "^1.0.4",
     "keccak256": "^1.0.3",
-    "prettier-plugin-solidity": "^1.0.0-beta.17"
+    "mathjs": "^9.5.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.18"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "^7.15.5",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
     "@babel/register": "^7.15.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.13",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.24.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.4.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.1",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.16"
+    "solidity-coverage": "^0.7.17"
   }
 }
