--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "hardhat": "^2.6.6",
     "hardhat-ethers": "^1.0.1",
     "hardhat-gas-reporter": "^1.0.4",
+    "heapdump": "^0.3.15",
+    "js-sha3": "^0.8.0",
     "keccak256": "^1.0.3",
     "mathjs": "^9.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18"
