--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "js-sha3": "^0.8.0",
     "keccak256": "^1.0.3",
     "mathjs": "^9.5.1",
+    "npm-check-updates": "^11.8.5",
     "prettier-plugin-solidity": "^1.0.0-beta.18"
   },
   "devDependencies": {
@@ -55,7 +56,7 @@
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.5.4",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.2",
